--- a/pages/index.html
+++ b/pages/index.html
@@ -5,14 +5,15 @@
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="script.js"></script>
 </head>
+
 <body>
   <header>
     <img id="profile" src="images/scripted_logo_orange.png">
     <h1>Troy's Portfolio</h1>
     <ul>
-      <li><a class="nav" href="">Home</a></li>
-      <li><a class="nav" href="">About</a></li>
-      <li><a class="nav" href="">Contact</a></li>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./about.html">About</a></li>
+      <li><a href="./contact.html">Contact</a></li>
     </ul>
   </header>
   <div class="project">
